--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>DETRAN 3D - Pro</title>
-    <style> body { margin: 0; overflow: hidden; background: #000; } </style>
+    <title>DETRAN 3D - Simulador de Baliza</title>
+    <style> body { margin: 0; overflow: hidden; background: #87CEEB; } </style>
 </head>
 <body>
     <script type="module">
         import * as THREE from 'https://cdn.skypack.dev/three@0.136.0';
 
-        // CONFIGURAÇÃO BÁSICA
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x87CEEB);
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -17,49 +16,75 @@
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // ILUMINAÇÃO
-        const light = new THREE.AmbientLight(0xffffff, 0.7);
-        scene.add(light);
+        // ILUMINAÇÃO PROFISSIONAL
+        scene.add(new THREE.AmbientLight(0xffffff, 0.6));
         const sun = new THREE.DirectionalLight(0xffffff, 1);
-        sun.position.set(5, 10, 5);
+        sun.position.set(10, 20, 10);
         scene.add(sun);
 
-        // PISTA (ASFALTO)
-        const ground = new THREE.Mesh(
-            new THREE.PlaneGeometry(100, 100),
-            new THREE.MeshPhongMaterial({ color: 0x444444 })
-        );
-        ground.rotation.x = -Math.PI / 2;
-        scene.add(ground);
+        // PISTA DE ASFALTO COM FAIXAS
+        const groundGroup = new THREE.Group();
+        const asphalt = new THREE.Mesh(new THREE.PlaneGeometry(20, 100), new THREE.MeshPhongMaterial({ color: 0x333333 }));
+        asphalt.rotation.x = -Math.PI / 2;
+        groundGroup.add(asphalt);
 
-        // CARRO 3D (CORPO)
+        // Faixas amarelas centrais
+        for(let i = -50; i < 50; i+=10) {
+            const stripe = new THREE.Mesh(new THREE.PlaneGeometry(0.5, 5), new THREE.MeshPhongMaterial({ color: 0xFFFF00 }));
+            stripe.rotation.x = -Math.PI / 2;
+            stripe.position.y = 0.05;
+            stripe.position.z = i;
+            groundGroup.add(stripe);
+        }
+        scene.add(groundGroup);
+
+        // ADICIONANDO CONES DE BALIZA
+        const cones = [];
+        function criarCone(x, z) {
+            const cone = new THREE.Mesh(
+                new THREE.ConeGeometry(0.4, 1, 32),
+                new THREE.MeshPhongMaterial({ color: 0xFF4500 }) // Laranja DETRAN
+            );
+            cone.position.set(x, 0.5, z);
+            scene.add(cone);
+            cones.push(cone);
+        }
+
+        // Fileira de cones para baliza
+        criarCone(-4, -10); criarCone(-4, -5); criarCone(-4, 0);
+        criarCone(4, -10); criarCone(4, -5); criarCone(4, 0);
+
+        // CARRO COM RODAS
         const car = new THREE.Group();
-        const body = new THREE.Mesh(
-            new THREE.BoxGeometry(2, 1, 4),
-            new THREE.MeshPhongMaterial({ color: 0xff0000 })
-        );
-        body.position.y = 0.5;
+        const body = new THREE.Mesh(new THREE.BoxGeometry(2, 0.8, 4), new THREE.MeshPhongMaterial({ color: 0xff0000 }));
+        body.position.y = 0.6;
         car.add(body);
         scene.add(car);
 
-        camera.position.set(0, 5, 10);
-        camera.lookAt(car.position);
+        camera.position.set(0, 8, 15);
 
-        // MOVIMENTAÇÃO
+        // CONTROLES
         const keys = {};
         window.addEventListener('keydown', (e) => keys[e.code] = true);
         window.addEventListener('keyup', (e) => keys[e.code] = false);
 
         function gameLoop() {
             requestAnimationFrame(gameLoop);
+            
+            let moveX = 0;
+            let moveZ = 0;
+
             if (keys['ArrowUp']) car.translateZ(-0.2);
             if (keys['ArrowDown']) car.translateZ(0.2);
-            if (keys['ArrowLeft']) car.rotation.y += 0.05;
-            if (keys['ArrowRight']) car.rotation.y -= 0.05;
+            if (keys['ArrowLeft']) car.rotation.y += 0.04;
+            if (keys['ArrowRight']) car.rotation.y -= 0.04;
 
-            // Câmera segue o carro suavemente
-            camera.position.lerp(new THREE.Vector3(car.position.x, car.position.y + 5, car.position.z + 10), 0.1);
+            // Sistema de Câmera Suave
+            const relativeCameraOffset = new THREE.Vector3(0, 5, 12);
+            const cameraOffset = relativeCameraOffset.applyMatrix4(car.matrixWorld);
+            camera.position.lerp(cameraOffset, 0.1);
             camera.lookAt(car.position);
+
             renderer.render(scene, camera);
         }
         gameLoop();
