--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<script type="module">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>DETRAN 3D - HARD MODE</title>
+    <style> 
+        body { margin: 0; overflow: hidden; background: #87CEEB; font-family: sans-serif; } 
+        #ui { position: absolute; top: 20px; left: 50%; transform: translateX(-50%); text-align: center; }
+        .timer { font-size: 40px; font-weight: bold; color: #333; background: white; padding: 10px 40px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.2); }
+    </style>
+</head>
+<body>
+    <div id="ui"><div class="timer" id="timerDisplay">00:00.00</div></div>
+    <script type="module">
         import * as THREE from 'https://cdn.skypack.dev/three@0.136.0';
 
-        // 1. CENA COM NÉVOA (Para dar profundidade)
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x87CEEB);
-        scene.fog = new THREE.Fog(0x87CEEB, 20, 100); 
+        scene.fog = new THREE.Fog(0x87CEEB, 20, 100);
 
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         const renderer = new THREE.WebGLRenderer({ antialias: true });
@@ -12,33 +24,33 @@
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // 2. LUZES DE FAROL
+        scene.add(new THREE.AmbientLight(0xffffff, 0.5));
+        const sun = new THREE.DirectionalLight(0xffffff, 1.2);
+        sun.position.set(10, 20, 10);
+        sun.castShadow = true;
+        scene.add(sun);
+
+        const floor = new THREE.Group();
+        const grass = new THREE.Mesh(new THREE.PlaneGeometry(200, 200), new THREE.MeshPhongMaterial({color: 0x7cfc00}));
+        grass.rotation.x = -Math.PI / 2; grass.receiveShadow = true; floor.add(grass);
+        const road = new THREE.Mesh(new THREE.PlaneGeometry(16, 200), new THREE.MeshPhongMaterial({color: 0x333333}));
+        road.rotation.x = -Math.PI / 2; road.position.y = 0.01; road.receiveShadow = true; floor.add(road);
+        scene.add(floor);
+
         const car = new THREE.Group();
-        
-        function criarFarol(x) {
-            const light = new THREE.SpotLight(0xffffff, 2, 15, Math.PI/4, 0.5);
-            light.position.set(x, 0.6, -2);
-            light.target.position.set(x, 0, -10);
-            car.add(light);
-            car.add(light.target);
-            return light;
-        }
-        const farolEsq = criarFarol(0.8);
-        const farolDir = criarFarol(-0.8);
-
-        // 3. CARRO COM TEXTURA DE VIDRO
-        const body = new THREE.Mesh(new THREE.BoxGeometry(2.2, 0.6, 4.5), new THREE.MeshPhongMaterial({color: 0xd32f2f}));
-        body.position.y = 0.5; body.castShadow = true; car.add(body);
-
-        const glassMat = new THREE.MeshPhongMaterial({color: 0x222222, shininess: 100, opacity: 0.8, transparent: true});
-        const cabin = new THREE.Mesh(new THREE.BoxGeometry(1.8, 0.6, 2), glassMat);
+        const carBody = new THREE.Mesh(new THREE.BoxGeometry(2.2, 0.6, 4.5), new THREE.MeshPhongMaterial({color: 0xd32f2f}));
+        carBody.position.y = 0.5; carBody.castShadow = true; car.add(carBody);
+        const cabin = new THREE.Mesh(new THREE.BoxGeometry(1.8, 0.6, 2), new THREE.MeshPhongMaterial({color: 0x222222, opacity: 0.8, transparent: true}));
         cabin.position.set(0, 1.1, -0.2); car.add(cabin);
 
+        const spotlight = new THREE.SpotLight(0xffffff, 2, 20, Math.PI/4);
+        spotlight.position.set(0, 1, -2);
+        spotlight.target.position.set(0, 0, -10);
+        car.add(spotlight); car.add(spotlight.target);
         scene.add(car);
 
-        // 4. CONES COM FÍSICA SIMPLES (Eles vão cair se bater!)
         const cones = [];
-        function criarCone(x, z) {
+        function createCone(x, z) {
             const cone = new THREE.Group();
             const body = new THREE.Mesh(new THREE.ConeGeometry(0.3, 1, 16), new THREE.MeshPhongMaterial({color: 0xFF4500}));
             body.position.y = 0.5; cone.add(body);
@@ -46,21 +58,7 @@
             scene.add(cone);
             cones.push({ mesh: cone, hit: false });
         }
-        // Criando o percurso de baliza
-        [-3, 3].forEach(x => { for(let z=-30; z<=10; z+=10) criarCone(x, z); });
-
-        // 5. LÓGICA DE COLISÃO
-        function checkCollision() {
-            cones.forEach(c => {
-                const dist = car.position.distanceTo(c.mesh.position);
-                if (dist < 1.5 && !c.hit) {
-                    c.hit = true;
-                    c.mesh.rotation.z = Math.PI / 2; // O cone "tomba"
-                    c.mesh.position.y = 0.1;
-                    console.log("PENALIDADE: Encostou no cone!");
-                }
-            });
-        }
+        [-4, 4].forEach(x => { for(let z=-30; z<=10; z+=10) createCone(x, z); });
 
         let startTime, running = false;
         const keys = {};
@@ -73,21 +71,29 @@
         function animate() {
             requestAnimationFrame(animate);
             if(keys['ArrowUp']) car.translateZ(-0.15);
-            if(keys['ArrowDown']) car.translateZ(0.1);
+            if(keys['ArrowDown']) car.translateZ(0.12);
             if(keys['ArrowLeft']) car.rotation.y += 0.04;
             if(keys['ArrowRight']) car.rotation.y -= 0.04;
 
-            checkCollision(); // Verifica se bateu
+            cones.forEach(c => {
+                const dist = car.position.distanceTo(c.mesh.position);
+                if (dist < 1.4 && !c.hit) {
+                    c.hit = true;
+                    c.mesh.rotation.z = Math.PI / 2.2;
+                    c.mesh.position.y = 0.2;
+                }
+            });
 
             if(running) {
                 const d = new Date(Date.now() - startTime);
                 document.getElementById('timerDisplay').innerText = d.toISOString().substr(14, 8);
             }
-
-            const offset = new THREE.Vector3(0, 5, 12).applyMatrix4(car.matrixWorld);
+            const offset = new THREE.Vector3(0, 5, 10).applyMatrix4(car.matrixWorld);
             camera.position.lerp(offset, 0.1);
             camera.lookAt(car.position);
             renderer.render(scene, camera);
         }
         animate();
     </script>
+</body>
+</html>
