--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DETRAN 3D - ULTRA GRAPHICS</title>
+    <title>DETRAN 3D - REALISTIC VERSION</title>
     <style> 
-        body { margin: 0; overflow: hidden; background: #87CEEB; font-family: sans-serif; } 
+        body { margin: 0; overflow: hidden; background: #87CEEB; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; } 
         #ui { position: absolute; top: 20px; left: 50%; transform: translateX(-50%); text-align: center; }
-        .timer { font-size: 40px; font-weight: bold; color: #333; background: white; padding: 10px 40px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.3); border-bottom: 4px solid #ccc; }
+        .timer { font-size: 42px; font-weight: bold; color: #fff; background: rgba(0,0,0,0.6); padding: 10px 40px; border-radius: 10px; border: 2px solid #ff4500; backdrop-filter: blur(5px); }
     </style>
 </head>
 <body>
@@ -15,73 +15,81 @@
         import * as THREE from 'https://cdn.skypack.dev/three@0.136.0';
 
         const scene = new THREE.Scene();
+        // CÉU REALISTA COM DEGRADÊ
         scene.background = new THREE.Color(0x87CEEB);
-        scene.fog = new THREE.Fog(0x87CEEB, 10, 120);
+        scene.fog = new THREE.Fog(0x87CEEB, 15, 150);
 
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.shadowMap.enabled = true;
+        renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // LUZ AMBIENTE (Resolve o problema das rodas sumindo)
-        scene.add(new THREE.AmbientLight(0xffffff, 0.7)); 
-        const sun = new THREE.DirectionalLight(0xffffff, 0.8);
-        sun.position.set(5, 20, 10);
+        // ILUMINAÇÃO DE ESTÚDIO
+        scene.add(new THREE.AmbientLight(0xffffff, 0.6));
+        const sun = new THREE.DirectionalLight(0xffffff, 1);
+        sun.position.set(20, 40, 20);
         sun.castShadow = true;
+        sun.shadow.mapSize.width = 2048;
+        sun.shadow.mapSize.height = 2048;
         scene.add(sun);
 
-        // PISTA COM TEXTURA MELHORADA
-        const floor = new THREE.Group();
-        const grass = new THREE.Mesh(new THREE.PlaneGeometry(400, 400), new THREE.MeshPhongMaterial({color: 0x567d46}));
-        grass.rotation.x = -Math.PI / 2; grass.receiveShadow = true; floor.add(grass);
+        // CHÃO COM TEXTURA DE GRAMA E ASFALTO
+        const world = new THREE.Group();
+        const grass = new THREE.Mesh(new THREE.PlaneGeometry(1000, 1000), new THREE.MeshPhongMaterial({color: 0x3d5a2e}));
+        grass.rotation.x = -Math.PI / 2; grass.receiveShadow = true; world.add(grass);
         
-        const road = new THREE.Mesh(new THREE.PlaneGeometry(16, 400), new THREE.MeshPhongMaterial({color: 0x222222}));
-        road.rotation.x = -Math.PI / 2; road.position.y = 0.01; road.receiveShadow = true; floor.add(road);
+        // Asfalto com brilho de material real
+        const road = new THREE.Mesh(new THREE.PlaneGeometry(16, 1000), new THREE.MeshStandardMaterial({color: 0x1a1a1a, roughness: 0.8}));
+        road.rotation.x = -Math.PI / 2; road.position.y = 0.02; road.receiveShadow = true; world.add(road);
 
-        // FAIXAS AMARELAS (Com brilho próprio para não sumirem)
-        for(let i = -200; i < 200; i+=10) {
-            const stripe = new THREE.Mesh(new THREE.PlaneGeometry(0.6, 5), new THREE.MeshBasicMaterial({color: 0xffd700}));
-            stripe.rotation.x = -Math.PI / 2; stripe.position.set(0, 0.02, i);
-            floor.add(stripe);
+        for(let i = -500; i < 500; i+=12) {
+            const stripe = new THREE.Mesh(new THREE.PlaneGeometry(0.5, 6), new THREE.MeshBasicMaterial({color: 0xffcc00}));
+            stripe.rotation.x = -Math.PI / 2; stripe.position.set(0, 0.03, i);
+            world.add(stripe);
         }
-        scene.add(floor);
+        scene.add(world);
 
-        // CARRO MODELADO (Com Rodas que aparecem!)
+        // CARRO COM DESIGN MELHORADO
         const car = new THREE.Group();
-        const body = new THREE.Mesh(new THREE.BoxGeometry(2.2, 0.7, 4.5), new THREE.MeshPhongMaterial({color: 0xd32f2f}));
-        body.position.y = 0.6; body.castShadow = true; car.add(body);
+        const body = new THREE.Mesh(new THREE.BoxGeometry(2.2, 0.7, 4.5), new THREE.MeshStandardMaterial({color: 0xc62828, metalness: 0.5, roughness: 0.4}));
+        body.position.y = 0.7; body.castShadow = true; car.add(body);
         
-        const windows = new THREE.Mesh(new THREE.BoxGeometry(1.9, 0.6, 2.2), new THREE.MeshPhongMaterial({color: 0x111111}));
-        windows.position.set(0, 1.2, -0.2); car.add(windows);
+        const cockpit = new THREE.Mesh(new THREE.BoxGeometry(1.8, 0.6, 2.2), new THREE.MeshStandardMaterial({color: 0x050505, metalness: 0.9, roughness: 0.1}));
+        cockpit.position.set(0, 1.3, -0.2); car.add(cockpit);
 
-        // RODAS 3D REAIS
-        const wheelGeo = new THREE.CylinderGeometry(0.4, 0.4, 0.5, 32);
-        const wheelMat = new THREE.MeshPhongMaterial({color: 0x000000});
-        const positions = [[1.1, 0.4, 1.4], [-1.1, 0.4, 1.4], [1.1, 0.4, -1.4], [-1.1, 0.4, -1.4]];
-        positions.forEach(pos => {
-            const wheel = new THREE.Mesh(wheelGeo, wheelMat);
-            wheel.rotation.z = Math.PI/2;
-            wheel.position.set(pos[0], pos[1], pos[2]);
-            car.add(wheel);
+        const wheelGeo = new THREE.CylinderGeometry(0.45, 0.45, 0.5, 32);
+        const wheelMat = new THREE.MeshStandardMaterial({color: 0x111111});
+        [[1.1, 0.45, 1.5], [-1.1, 0.45, 1.5], [1.1, 0.45, -1.5], [-1.1, 0.45, -1.5]].forEach(p => {
+            const w = new THREE.Mesh(wheelGeo, wheelMat);
+            w.rotation.z = Math.PI/2; w.position.set(p[0], p[1], p[2]); car.add(w);
         });
-
         scene.add(car);
 
-        // CONES COM BASE (Estilo Detran)
-        const cones = [];
-        function createCone(x, z) {
-            const coneGroup = new THREE.Group();
-            const base = new THREE.Mesh(new THREE.BoxGeometry(0.8, 0.1, 0.8), new THREE.MeshPhongMaterial({color: 0x111}));
-            const body = new THREE.Mesh(new THREE.ConeGeometry(0.3, 1, 16), new THREE.MeshPhongMaterial({color: 0xff4500}));
-            body.position.y = 0.5; coneGroup.add(base, body);
-            coneGroup.position.set(x, 0, z);
-            scene.add(coneGroup);
-            cones.push({ mesh: coneGroup, hit: false });
+        // CONES E OBSTÁCULOS
+        const obstacles = [];
+        function addCone(x, z) {
+            const cone = new THREE.Group();
+            const b = new THREE.Mesh(new THREE.BoxGeometry(0.8, 0.1, 0.8), new THREE.MeshStandardMaterial({color: 0x222}));
+            const c = new THREE.Mesh(new THREE.ConeGeometry(0.3, 1, 16), new THREE.MeshStandardMaterial({color: 0xff6600}));
+            c.position.y = 0.5; cone.add(b, c);
+            cone.position.set(x, 0.05, z); scene.add(cone);
+            obstacles.push({mesh: cone, hit: false});
         }
-        [-4, 4].forEach(x => { for(let z=-40; z<=20; z+=10) createCone(x, z); });
+        [-4, 4].forEach(x => { for(let z=-60; z<=20; z+=15) addCone(x, z); });
 
-        // CONTROLES E ANIMAÇÃO
+        // SISTEMA DE PLACAS
+        function addSign(x, z, text) {
+            const post = new THREE.Mesh(new THREE.CylinderGeometry(0.1, 0.1, 4), new THREE.MeshStandardMaterial({color: 0x777}));
+            post.position.set(x, 2, z);
+            const board = new THREE.Mesh(new THREE.BoxGeometry(1.5, 1.5, 0.1), new THREE.MeshStandardMaterial({color: 0xffffff}));
+            board.position.set(x, 3.5, z);
+            scene.add(post, board);
+        }
+        addSign(6, -10, "PARE");
+
+        // MOVIMENTO E LÓGICA
         let startTime, running = false;
         const keys = {};
         window.addEventListener('keydown', e => { 
@@ -90,33 +98,28 @@
         });
         window.addEventListener('keyup', e => keys[e.code] = false);
 
-        function animate() {
-            requestAnimationFrame(animate);
-            if(keys['ArrowUp']) car.translateZ(-0.18);
-            if(keys['ArrowDown']) car.translateZ(0.12);
-            if(keys['ArrowLeft']) car.rotation.y += 0.045;
-            if(keys['ArrowRight']) car.rotation.y -= 0.045;
+        function update() {
+            requestAnimationFrame(update);
+            if(keys['ArrowUp']) car.translateZ(-0.2);
+            if(keys['ArrowDown']) car.translateZ(0.15);
+            if(keys['ArrowLeft']) car.rotation.y += 0.05;
+            if(keys['ArrowRight']) car.rotation.y -= 0.05;
 
-            // FÍSICA DE IMPACTO
-            cones.forEach(c => {
-                const dist = car.position.distanceTo(c.mesh.position);
-                if (dist < 1.6 && !c.hit) {
-                    c.hit = true;
-                    c.mesh.rotation.z = Math.PI / 2.5;
-                    c.mesh.position.y = 0.1;
+            obstacles.forEach(o => {
+                if (car.position.distanceTo(o.mesh.position) < 1.7 && !o.hit) {
+                    o.hit = true; o.mesh.rotation.z = 1.4; o.mesh.position.y = 0.2;
                 }
             });
 
             if(running) {
-                const d = new Date(Date.now() - startTime);
-                document.getElementById('timerDisplay').innerText = d.toISOString().substr(14, 8);
+                const diff = new Date(Date.now() - startTime);
+                document.getElementById('timerDisplay').innerText = diff.toISOString().substr(14, 8);
             }
-            const offset = new THREE.Vector3(0, 5, 12).applyMatrix4(car.matrixWorld);
-            camera.position.lerp(offset, 0.1);
+            camera.position.lerp(new THREE.Vector3(0, 6, 14).applyMatrix4(car.matrixWorld), 0.1);
             camera.lookAt(car.position);
             renderer.render(scene, camera);
         }
-        animate();
+        update();
     </script>
 </body>
 </html>
