--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         body { margin: 0; overflow: hidden; background: #87CEEB; font-family: sans-serif; }
         #ui { position: absolute; top: 20px; left: 50%; transform: translateX(-50%); text-align: center; z-index: 10; }
         .timer { font-size: 40px; font-weight: bold; color: #fff; background: rgba(0,0,0,0.8); padding: 10px 40px; border-radius: 15px; border: 2px solid #00ff44; }
-        #status { position: fixed; bottom: 20px; width: 100%; text-align: center; color: white; background: rgba(0,0,0,0.5); padding: 5px; }
+        #status { position: fixed; bottom: 20px; width: 100%; text-align: center; color: white; background: rgba(0,0,0,0.7); padding: 10px; }
     </style>
 </head>
 <body>
     <div id="ui"><div class="timer" id="timerDisplay">00:00.00</div></div>
-    <div id="status">Procurando arquivo 'carro.glb'...</div>
+    <div id="status">Procurando Mercedes (carro.glb)...</div>
 
     <script type="module">
         import * as THREE from 'https://cdn.skypack.dev/three@0.136.0';
@@ -21,20 +21,21 @@
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x87CEEB);
 
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 10000);
-        camera.position.set(0, 10, 20);
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 5000);
+        camera.position.set(0, 5, 15);
 
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
         scene.add(new THREE.AmbientLight(0xffffff, 2));
-        const light = new THREE.DirectionalLight(0xffffff, 1);
-        light.position.set(10, 10, 10);
-        scene.add(light);
+        const sun = new THREE.DirectionalLight(0xffffff, 1);
+        sun.position.set(10, 20, 10);
+        scene.add(sun);
 
-        // Grade para você saber onde é o chão
-        scene.add(new THREE.GridHelper(500, 50));
+        // Grade para você saber onde está o chão
+        const grid = new THREE.GridHelper(200, 50, 0xffffff, 0x444444);
+        scene.add(grid);
 
         let car;
         const loader = new GLTFLoader();
@@ -42,23 +43,25 @@
         loader.load('carro.glb', (gltf) => {
             car = gltf.scene;
             
-            // AJUSTE AUTOMÁTICO DE TAMANHO (O segredo está aqui!)
+            // --- RADAR DE ESCALA E POSIÇÃO ---
             const box = new THREE.Box3().setFromObject(car);
             const size = box.getSize(new THREE.Vector3());
+            const center = box.getCenter(new THREE.Vector3());
+
+            // Força o carro a ter um tamanho visível de 8 metros
             const maxDim = Math.max(size.x, size.y, size.z);
-            const scale = 10 / maxDim; // Força o carro a ter 10 unidades de tamanho
+            const scale = 8 / maxDim; 
             car.scale.set(scale, scale, scale);
 
-            // Centraliza o carro no meio da tela
-            const center = box.getCenter(new THREE.Vector3());
+            // Traz o carro para o ponto zero (0,0,0)
             car.position.x = -center.x * scale;
-            car.position.y = -center.y * scale + (size.y * scale / 2); // Toca o chão
+            car.position.y = -center.y * scale + (size.y * scale / 2);
             car.position.z = -center.z * scale;
 
             scene.add(car);
-            document.getElementById('status').innerText = "✅ MERCEDES CARREGADA! Use as SETAS.";
+            document.getElementById('status').innerText = "✅ MERCEDES ENCONTRADA! Use as SETAS.";
         }, undefined, (error) => {
-            document.getElementById('status').innerText = "❌ ERRO: Verifique se o nome no GitHub é 'carro.glb'";
+            document.getElementById('status').innerHTML = "❌ ERRO: O arquivo 'carro.glb' não está no seu GitHub!";
         });
 
         const keys = {};
@@ -69,14 +72,14 @@
         function animate() {
             requestAnimationFrame(animate);
             if (car) {
-                // Movimento (ajustado para o novo sistema de escala)
-                if(keys['ArrowUp']) car.translateZ(0.5); 
-                if(keys['ArrowDown']) car.translateZ(-0.3);
-                if(keys['ArrowLeft']) car.rotation.y += 0.05;
-                if(keys['ArrowRight']) car.rotation.y -= 0.05;
+                // Movimentação (se o carro estiver de lado, vamos girar ele depois)
+                if(keys['ArrowUp']) car.translateZ(0.3); 
+                if(keys['ArrowDown']) car.translateZ(-0.2);
+                if(keys['ArrowLeft']) car.rotation.y += 0.04;
+                if(keys['ArrowRight']) car.rotation.y -= 0.04;
 
-                // Câmera segue o carro de perto
-                const offset = new THREE.Vector3(0, 8, -20).applyMatrix4(car.matrixWorld);
+                // Câmera segue o carro
+                const offset = new THREE.Vector3(0, 6, -15).applyMatrix4(car.matrixWorld);
                 camera.position.lerp(offset, 0.1);
                 camera.lookAt(car.position);
             }
